ChangeLog for Version 3.11.4:

2007-07-10   Chris Johnson   <grundee@users.sourceforge.net>
* includes.h, commondisplay.cpp: Added function called printfunds(3) which 
prints funds at the specified location, prefixes some text, and then returns
everything (such as color and cursor location) back to the way it was before.
* activate.cpp, reviewmode.cpp, baseactions.cpp, commondisplay.cpp, date.cpp:
Changes all money displaying to use new function.
* newgame.cpp: Added ability to use real name by default for character 
creation.

ChangeLog for Version 3.11.3:

2007-07-08   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* includes.h, configure.ac: Updated to version 3.11.3 for release.

2007-07-08   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* daily.cpp: Fixed a bug causing vacation dates to never end.

2007-06-30   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* lcsio.cpp, lcsio.h: Windows version of the new I/O uses _mkdir and includes
direct.h for VC++ support.
* fight.cpp: Liberals that are captured now lose their hostages.
* daily.cpp: Liberals that lose contact and go into hiding now stop their
current actions.
* daily.cpp: Dates can now only be gone on if the Liberal is either in the
hospital or at a safehouse.
* news.cpp: The news no longer specifies whether you were killed when the LCS
squad is wiped out on site, in order to support cases where you were really just
arrested.
* siege.cpp: Hostages which are rescued can no longer continue to be tended.
* justice.cpp: During trials and on release from prison, Liberals are now
transferred to the homeless shelter as their new base if their current base is
no longer a safehouse.

2007-06-30   Chris Johnson   <grundee@users.sourceforge.net>
* lcsio.h, lcsio.cpp: Completely rewrote the LCS I/O system. Use LCSOpenFile
and LCSCloseFile now, see documentation in lcsio.h for help.
* cursesmovie.h, cursesmovie.cpp, news.cpp, highscore.cpp, saveload.cpp: