@@ -1,6 +1,10 @@
 ChangeLog for Version 3.11.4:
 
 2007-07-10   Chris Johnson   <grundee@users.sourceforge.net>
+* commondisplay.h: Added real name to the profile of a liberal/conservative
+page.
+
+2007-07-10   Chris Johnson   <grundee@users.sourceforge.net>
 * includes.h, commondisplay.cpp: Added function called printfunds(3) which 
 prints funds at the specified location, prefixes some text, and then returns
 everything (such as color and cursor location) back to the way it was before.
